# GambitTrainer

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  trainer  vcpkg-configuration.json  vcpkg.json
src/: Board.cpp  Board.h  CMakeLists.txt  Piece.cpp  Piece.h  main.cpp  main.h
